/*******************************************************************************
 * Copyright 2021 Darval Solutions Ltd.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
 * in compliance with the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 *
 *******************************************************************************/
 
 syntax = "proto3";

option go_package = "github.com/edgeca-org/edgeca/grpc";

package edgeca;

// The CA service definition.
service CA {
  rpc RequestPolicy (PolicyRequest) returns (PolicyReply) {}
  rpc GenerateCertificate (CertificateRequest) returns (CertificateReply) {} 

}


message PolicyReply {
  string policy = 1;
	string defaultOrganization = 2;
  string defaultOrganizationalUnit = 3;
	string defaultProvince = 4;
	string defaultLocality = 5;
	string defaultCountry = 6;
}

message CertificateRequest {
  string csr = 1;
  string authToken = 2;
}

message CertificateReply {
  string certificate = 1;
  string privateKey = 2;
}

message PolicyRequest {} 

